final_antlr/gen/MiLenguajeParser.java
// Generated from /home/c3po/Git/lenguajes/final_antlr/grammar/MiLenguaje.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MiLenguajeParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, RESERVED_WORD_F=7, BOOLEAN=8, 
		NUMBER=9, INT=10, REAL=11, STRING=12, Spec=13, Global=14, Res=15, Af=16, 
		Read=17, If=18, Fi=19, Do=20, Od=21, Resource=22, Procedure=23, Type=24, 
		Optype=25, Rec=26, Int=27, Getarg=28, Cap=29, Import=30, Id=31, Create=32, 
		End=33, Stop=34, Write=35, Send=36, Or=37, Body=38, Fa=39, Mod=40, Var=41, 
		To=42, True=43, False=44, Returns=45, Writes=46, Put=47, Op=48, Receive=49, 
		Destroy=50, Final=51, Process=52, Char=53, Chars=54, Bool=55, Real=56, 
		Reply=57, Next=58, Ni=59, Co=60, Proc=61, String=62, Const=63, Low=64, 
		High=65, Call=66, In=67, Separate=68, ID=69, IDENTIFIER=70, IDENTIFIER_PTR=71, 
		TK_SEPARA=72, TK_LEFT_BRACKET=73, TK_RIGHT_BRACKET=74, TK_LEFT_PARENTHESES=75, 
		TK_RIGHT_PARENTHESES=76, TK_LEFT_BRACE=77, TK_RIGHT_BRACE=78, TK_EXECUTE=79, 
		TK_DOT=80, TK_SEMI_COLON=81, TK_COLON=82, TK_COMMA=83, TK_INCREMENT=84, 
		TK_DECREMENT=85, TK_POINTER=86, TK_NOT=87, TK_PLUS=88, TK_MINUS=89, TK_ADDRESS=90, 
		TK_N_INVOCATIONS=91, TK_EXPONENTIATION=92, TK_MULTIPLICATION=93, TK_DIVISION=94, 
		TK_REMAINDER=95, TK_MODULUS=96, TK_CONTAT=97, TK_LEFT_SHIFT=98, TK_RIGHT_SHIFT=99, 
		TK_EQUAL=100, TK_NOT_EQUAL=101, TK_GREATER=102, TK_lESS=103, TK_GREATER_EQUAL=104, 
		TK_LESS_EQUAL=105, TK_AND=106, TK_OR=107, TK_XOR=108, TK_ASSIGN=109, TK_SWAP=110, 
		TK_INCREMENT_ASSIGN=111, TK_DECREMENT_ASSIGN=112, TK_MULTIPLICATION_ASSIGN=113, 
		TK_DIVISION_ASSIGN=114, TK_REMAINDER_ASSIGN=115, TK_EXPONENTIATION_ASSIGN=116, 
		TK_OR_ASSIGN=117, TK_AND_ASSIGN=118, TK_CONCAT_ASSIGN=119, TK_LEFT_SHIFT_ASSIGN=120, 
		TK_RIGHT_SHIFT_ASSIGN=121, ID_LETTER=122, DIGIT=123, SPACES=124, LINE_COMMENT=125, 
		Initial=126, Tk_increment=127, Tk_decrement=128;
	public static final int
		RULE_start = 0, RULE_entry = 1, RULE_global = 2, RULE_resource = 3, RULE_body = 4, 
		RULE_resource_specification = 5, RULE_resource_body = 6, RULE_spec = 7, 
		RULE_import_ = 8, RULE_const_ = 9, RULE_type = 10, RULE_optype = 11, RULE_op_type_params = 12, 
		RULE_var = 13, RULE_var_create = 14, RULE_operation = 15, RULE_operation_one = 16, 
		RULE_proc = 17, RULE_block = 18, RULE_declarations = 19, RULE_statements = 20, 
		RULE_comma_params = 21, RULE_comma_expressions_params = 22, RULE_params = 23, 
		RULE_param = 24, RULE_data_type = 25, RULE_equal_expression = 26, RULE_assign_expression = 27, 
		RULE_function_ = 28, RULE_function_end = 29, RULE_resource_control = 30, 
		RULE_create_cap_expression = 31, RULE_destroy_cap_expression = 32, RULE_operation_invocation = 33, 
		RULE_call_expression = 34, RULE_send_expression = 35, RULE_concurrent_expression = 36, 
		RULE_call_invocation = 37, RULE_quantifier = 38, RULE_sequential = 39, 
		RULE_if_inner = 40, RULE_boolean_expression = 41, RULE_for_expr = 42, 
		RULE_for_expr_Ls = 43, RULE_block_cycle = 44, RULE_operation_service = 45, 
		RULE_expression = 46, RULE_assign = 47, RULE_assign_slice = 48, RULE_binary_expression = 49, 
		RULE_or_expression = 50, RULE_and_expression = 51, RULE_comp_expression = 52, 
		RULE_shift_expression = 53, RULE_simple_op_expression = 54, RULE_other_op_expression = 55, 
		RULE_exponentiation_expression = 56, RULE_unary_expression = 57, RULE_post_op = 58, 
		RULE_pre_op = 59, RULE_single_expr = 60, RULE_array = 61, RULE_subscript_slice = 62, 
		RULE_slice = 63, RULE_subscript = 64, RULE_grouping = 65, RULE_sign_change = 66, 
		RULE_assigns = 67, RULE_comps = 68, RULE_simple_op = 69, RULE_other_op = 70;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "entry", "global", "resource", "body", "resource_specification", 
			"resource_body", "spec", "import_", "const_", "type", "optype", "op_type_params", 
			"var", "var_create", "operation", "operation_one", "proc", "block", "declarations", 
			"statements", "comma_params", "comma_expressions_params", "params", "param", 
			"data_type", "equal_expression", "assign_expression", "function_", "function_end", 
			"resource_control", "create_cap_expression", "destroy_cap_expression", 
			"operation_invocation", "call_expression", "send_expression", "concurrent_expression", 
			"call_invocation", "quantifier", "sequential", "if_inner", "boolean_expression", 
			"for_expr", "for_expr_Ls", "block_cycle", "operation_service", "expression", 
			"assign", "assign_slice", "binary_expression", "or_expression", "and_expression", 
			"comp_expression", "shift_expression", "simple_op_expression", "other_op_expression", 
			"exponentiation_expression", "unary_expression", "post_op", "pre_op", 
			"single_expr", "array", "subscript_slice", "slice", "subscript", "grouping", 
			"sign_change", "assigns", "comps", "simple_op", "other_op"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'on'", "'oc'", "'skip'", "'exit'", "'NOTYET'", "'EOF'", null, 
			null, null, null, null, null, "'spec'", "'global'", "'res'", "'af'", 
			"'read'", "'if'", "'fi'", "'do'", "'od'", "'resource'", "'procedure'", 
			"'type'", "'optype'", "'rec'", "'int'", "'getarg'", "'cap'", "'import'", 
			"'id'", "'create'", "'end'", "'stop'", "'write'", "'send'", "'or'", "'body'", 
			"'fa'", null, "'var'", "'to'", "'true'", "'false'", "'returns'", "'writes'", 
			"'put'", "'op'", "'receive'", "'destroy'", "'final'", "'process'", "'char'", 
			"'chars'", "'bool'", "'real'", "'reply'", "'next'", "'ni'", "'co'", "'proc'", 
			"'string'", "'const'", "'low'", "'high'", "'call'", "'in'", "'separate'", 
			null, null, null, "'[]'", "'['", "']'", "'('", "')'", "'{'", "'}'", "'->'", 
			"'.'", "';'", "':'", "','", "'++'", "'--'", "'^'", null, "'+'", "'-'", 
			"'@'", "'?'", "'**'", "'*'", "'/'", "'%'", null, "'||'", "'<<'", "'>>'", 
			"'='", null, "'>'", "'<'", "'>='", "'<='", null, null, "'xor'", "':='", 
			"':=:'", "'+:='", "'-:='", "'*:='", "'/:='", "'%:='", "'**:='", "'|:='", 
			"'&:='", "'||:='", "'<<:='", "'>>:='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, "RESERVED_WORD_F", "BOOLEAN", 
			"NUMBER", "INT", "REAL", "STRING", "Spec", "Global", "Res", "Af", "Read", 
			"If", "Fi", "Do", "Od", "Resource", "Procedure", "Type", "Optype", "Rec", 
			"Int", "Getarg", "Cap", "Import", "Id", "Create", "End", "Stop", "Write", 
			"Send", "Or", "Body", "Fa", "Mod", "Var", "To", "True", "False", "Returns", 
			"Writes", "Put", "Op", "Receive", "Destroy", "Final", "Process", "Char", 
			"Chars", "Bool", "Real", "Reply", "Next", "Ni", "Co", "Proc", "String", 
			"Const", "Low", "High", "Call", "In", "Separate", "ID", "IDENTIFIER", 
			"IDENTIFIER_PTR", "TK_SEPARA", "TK_LEFT_BRACKET", "TK_RIGHT_BRACKET", 
			"TK_LEFT_PARENTHESES", "TK_RIGHT_PARENTHESES", "TK_LEFT_BRACE", "TK_RIGHT_BRACE", 
			"TK_EXECUTE", "TK_DOT", "TK_SEMI_COLON", "TK_COLON", "TK_COMMA", "TK_INCREMENT", 
			"TK_DECREMENT", "TK_POINTER", "TK_NOT", "TK_PLUS", "TK_MINUS", "TK_ADDRESS", 
			"TK_N_INVOCATIONS", "TK_EXPONENTIATION", "TK_MULTIPLICATION", "TK_DIVISION", 
			"TK_REMAINDER", "TK_MODULUS", "TK_CONTAT", "TK_LEFT_SHIFT", "TK_RIGHT_SHIFT", 
			"TK_EQUAL", "TK_NOT_EQUAL", "TK_GREATER", "TK_lESS", "TK_GREATER_EQUAL", 
			"TK_LESS_EQUAL", "TK_AND", "TK_OR", "TK_XOR", "TK_ASSIGN", "TK_SWAP", 
			"TK_INCREMENT_ASSIGN", "TK_DECREMENT_ASSIGN", "TK_MULTIPLICATION_ASSIGN", 
			"TK_DIVISION_ASSIGN", "TK_REMAINDER_ASSIGN", "TK_EXPONENTIATION_ASSIGN", 
			"TK_OR_ASSIGN", "TK_AND_ASSIGN", "TK_CONCAT_ASSIGN", "TK_LEFT_SHIFT_ASSIGN", 
			"TK_RIGHT_SHIFT_ASSIGN", "ID_LETTER", "DIGIT", "SPACES", "LINE_COMMENT", 
			"Initial", "Tk_increment", "Tk_decrement"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MiLenguaje.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MiLenguajeParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public List<EntryContext> entry() {
			return getRuleContexts(EntryContext.class);
		}
		public EntryContext entry(int i) {
			return getRuleContext(EntryContext.class,i);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiLenguajeListener ) ((MiLenguajeListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiLenguajeListener ) ((MiLenguajeListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiLenguajeVisitor ) return ((MiLenguajeVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(142);
				entry();
				}
				}
				setState(145); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Spec) | (1L << Global) | (1L << Resource) | (1L << Body))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EntryContext extends ParserRuleContext {
		public ResourceContext resource() {
			return getRuleContext(ResourceContext.class,0);
		}
		public GlobalContext global() {
			return getRuleContext(GlobalContext.class,0);
		}
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public EntryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_entry; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiLenguajeListener ) ((MiLenguajeListener)listener).enterEntry(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiLenguajeListener ) ((MiLenguajeListener)listener).exitEntry(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiLenguajeVisitor ) return ((MiLenguajeVisitor<? extends T>)visitor).visitEntry(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EntryContext entry() throws RecognitionException {
		EntryContext _localctx = new EntryContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_entry);
		try {
			setState(150);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Spec:
			case Resource:
				enterOuterAlt(_localctx, 1);
				{
				setState(147);
				resource();
				}
				break;
			case Global:
				enterOuterAlt(_localctx, 2);
				{
				setState(148);
				global();
				}
				break;
			case Body:
				enterOuterAlt(_localctx, 3);
				{
				setState(149);
				body();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GlobalContext extends ParserRuleContext {
		public TerminalNode Global() { return getToken(MiLenguajeParser.Global, 0); }
		public TerminalNode ID() { return getToken(MiLenguajeParser.ID, 0); }
		public TerminalNode End() { return getToken(MiLenguajeParser.End, 0); }
		public List<Const_Context> const_() {
			return getRuleContexts(Const_Context.class);
		}
		public Const_Context const_(int i) {
			return getRuleContext(Const_Context.class,i);
		}
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public GlobalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_global; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiLenguajeListener ) ((MiLenguajeListener)listener).enterGlobal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiLenguajeListener ) ((MiLenguajeListener)listener).exitGlobal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiLenguajeVisitor ) return ((MiLenguajeVisitor<? extends T>)visitor).visitGlobal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GlobalContext global() throws RecognitionException {
		GlobalContext _localctx = new GlobalContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_global);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152);
			match(Global);
			setState(153);
			match(ID);
			setState(158);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Type || _la==Const) {
				{
				setState(156);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case Const:
					{
					setState(154);
					const_();
					}
					break;
				case Type:
					{
					setState(155);
					type();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(160);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(161);
			match(End);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ResourceContext extends ParserRuleContext {
		public TerminalNode Resource() { return getToken(MiLenguajeParser.Resource, 0); }
		public TerminalNode ID() { return getToken(MiLenguajeParser.ID, 0); }
		public TerminalNode Separate() { return getToken(MiLenguajeParser.Separate, 0); }
		public Resource_specificationContext resource_specification() {
			return getRuleContext(Resource_specificationContext.class,0);
		}
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public SpecContext spec() {
			return getRuleContext(SpecContext.class,0);
		}
		public TerminalNode TK_LEFT_PARENTHESES() { return getToken(MiLenguajeParser.TK_LEFT_PARENTHESES, 0); }
		public TerminalNode TK_RIGHT_PARENTHESES() { return getToken(MiLenguajeParser.TK_RIGHT_PARENTHESES, 0); }
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public ResourceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_resource; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiLenguajeListener ) ((MiLenguajeListener)listener).enterResource(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiLenguajeListener ) ((MiLenguajeListener)listener).exitResource(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiLenguajeVisitor ) return ((MiLenguajeVisitor<? extends T>)visitor).visitResource(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ResourceContext resource() throws RecognitionException {
		ResourceContext _localctx = new ResourceContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_resource);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(164);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Spec) {
				{
				setState(163);
				spec();
				}
			}

			setState(166);
			match(Resource);
			setState(167);
			match(ID);
			setState(173);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(168);
				match(TK_LEFT_PARENTHESES);
				setState(170);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ID) {
					{
					setState(169);
					params();
					}
				}

				setState(172);
				match(TK_RIGHT_PARENTHESES);
				}
				break;
			}
			setState(178);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				setState(175);
				match(Separate);
				}
				break;
			case 2:
				{
				setState(176);
				resource_specification();
				}
				break;
			case 3:
				{
				setState(177);
				body();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
